--- a/Biltern-Server/pom.xml
+++ b/Biltern-Server/pom.xml
@@ -73,7 +73,11 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
