--- a/Biltern-Client/package.json
+++ b/Biltern-Client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "uuid": "^9.0.0"
