--- a/Biltern-Server/pom.xml
+++ b/Biltern-Server/pom.xml
@@ -98,8 +98,16 @@
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
-			<version>5.5.13</version>
+			<version>5.5.13.3</version>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>com.itextpdf</groupId>-->
+<!--			<artifactId>itext7-core</artifactId>-->
+<!--			<version>7.1.7</version>-->
+<!--		</dependency>-->
+
+
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
